--- a/AppControl Manager/ReleaseNotes.txt
+++ b/AppControl Manager/ReleaseNotes.txt
@@ -1,17 +1,9 @@
-* Reduced the size of the package generated for AppControl Manager by not bundling the library that is already absorbed into the main executable.
+* Updated dependencies to the latest versions, including the .NET SDK.
 
-* Improved resiliency when working with UI elements ensuring they always automatically use the correct thread.
+* Fixed an issue related to retrieving the Microsoft recommended User-Mode block rules. Microsoft set the entire repository responsible for hosting the list as Private. Now the app no longer tries to access the repository and instead retrieves the list from the Microsoft Learn page directly.
 
-* Significantly improved the design and features of the List Views that offer selecting packaged apps to create App Control policies for, which are in the Create Supplemental Policy page and Create Deny Policy page.
+* When sound is on (it is off by default) in the AppControl Manager, the typing effect's audio no longer appears in the OS media controls.
 
-* Updated NuGet dependencies.
+* Further strengthened both app's security by adopting "DEPENDENTLOADFLAG" flag forcing the app to always find DLLs it needs from the System32 directory only.
 
-* Added a localized description to the app that now appears when fetching the list of installed apps.
-
-* In the MDE Advanced Hunting page, added new filtering options based on each property. That means you can filter the data based on Device/Computer name, Policy name and so on. There are 18 different properties to use for filtering.
-
-* All of the List Views in the app now have column resizing capability. Simply use the newly added separators on the headers to resize each column.
-
-* All of the pages that show file scan results now have the option to export the ListView items to JSON file.
-
-
+* Improved memory management by tightening resource usage in various UI elements of AppControl Manager.
